--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ footer {
 }
 
 .button {
-  background-color: #ff80b0;
+  background-color: rgb(255, 128, 176);
   color: #ffffff;
   padding: 5px 10px;
   border: none;
@@ -78,9 +78,12 @@ footer {
 <div class="form-text">
   <h2>Contact Us</h2>
   <form>
-    <input type="text" placeholder="Name">
-    <input type="email" placeholder="Email">
-    <textarea placeholder="Message"></textarea>
+    <label for="name">Name:</label>
+    <input type="text" id="name" placeholder="Enter your name">
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="Enter your email">
+    <label for="message">Message:</label>
+    <textarea id="message" placeholder="Enter your message"></textarea>
     <button class="button">Submit</button>
   </form>
 </div>
